--- a/translations/kangyur/translations/072-007_toh307-sutra_on_the_limits_of_lifes_duration.xml
+++ b/translations/kangyur/translations/072-007_toh307-sutra_on_the_limits_of_lifes_duration.xml
@@ -26,7 +26,7 @@
                 <editor role="finalReviewer" ref="contributors.xml#person-250">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.12 <date>2021</date>
+                <edition>v 1.0.13 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -62,7 +62,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-29T12:59:53.573Z" user="admin">29/01/2023 12:59:53</note>
+                <note type="lastUpdated" date-time="2023-04-20T08:39:54.15Z" user="admin">20/04/2023 08:39:54</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version
                     increment</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:19:24.922Z" user="mike">2.d</note>
@@ -108,6 +108,7 @@
                 <note type="updated" update="text-version" value="1.0.10" date-time="2022-12-14T14:36:00.272Z" user="martina-cotter">Updated title of Toh 339 to "Transformation of Karma."</note>
                 <note type="updated" update="text-version" value="1.0.11" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
                 <note type="updated" update="text-version" value="1.0.12" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
+                <note type="updated" update="text-version" value="1.0.13" date-time="2023-04-20T08:39:51.272Z" user="celso">Activated pending links</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -319,8 +320,8 @@
                             of Life</title>, a rather late Tibetan commentary by Choné Lama Drakpa Shedrup (<foreign xml:lang="Bo-Ltn">co ne bla ma
                             grags pa bshad sgrub</foreign>, 1675–1748).<note place="end" xml:id="UT22084-072-007-39"> For detailed information on
                             Drakpa Shedrup, see <ref target="https://treasuryoflives.org/biographies/view/Drakpa-Shedrub/2931">Treasury of
-                            Lives</ref>. The larger first part of this commentary contains a concise, summarized version (<foreign xml:lang="Bo-Ltn" type="term">don bsdus</foreign>) of the two <title xml:lang="Sa-Ltn">Karma­vibhaṅga­sūtras</title> (<ref rend="pending" target="https://read.84000.co/translation/toh338.html">Toh 338</ref> and <ref target="https://read.84000.co/translation/toh339.html">Toh 339</ref>; see Galasek-Hul and Lama
-                            Kunga Thartse Rinpoche 2021a and forthcoming), which largely follows the structure of Toh 339. The second part of Drakpa
+                            Lives</ref>. The larger first part of this commentary contains a concise, summarized version (<foreign xml:lang="Bo-Ltn" type="term">don bsdus</foreign>) of the two <title xml:lang="Sa-Ltn">Karma­vibhaṅga­sūtras</title> (<ref target="https://read.84000.co/translation/toh338.html">Toh 338</ref> and <ref target="https://read.84000.co/translation/toh339.html">Toh 339</ref>; see Galasek-Hul and Lama
+                            Kunga Thartse Rinpoche 2023 and 2021), which largely follows the structure of Toh 339. The second part of Drakpa
                             Shedrup’s text contains the commentary on<title xml:lang="en"> The Sūtra on the Limits of Life</title>. While Drakpa
                             Shedrup’s commentary does not add any new information that is not available from the sūtra itself, it does stand out for
                             its conciseness and very clear language.</note>
@@ -1606,7 +1607,7 @@
                             Galasek-Hul and Lama Kunga Thartse Rinpoche (2021).</bibl>
                         <bibl xml:id="UT22084-072-007-326">
                             <title xml:lang="Bo-Ltn">las rnam ’byed</title> (<title xml:lang="Sa-Ltn">Karmavibhaṅga</title>). Toh 338, Degé Kangyur vol. 72 (mdo sde, sa), folios 277.a–298.b. English translation in
-                            Galasek-Hul and Lama Kunga Thartse Rinpoche (forthcoming).</bibl>
+                            Galasek-Hul and Lama Kunga Thartse Rinpoche (2023).</bibl>
                         <bibl xml:id="UT22084-072-007-327">Vasubandhu. <title xml:lang="Bo-Ltn">chos mngon pa’i mdzod kyi tshig le’ur byas pa</title>
                                 (<title xml:lang="Sa-Ltn">Abhidharma­kośa­kārikā</title>). Toh 4089, Degé Tengyur vol. 140 (mngon pa, ku), folios
                                 1.b-25.a<ref rend="pending" target="https://read.84000.co/translation/toh4089.html" inst="add entry to secondary sources"/>
@@ -1717,12 +1718,12 @@
                         <ref target="https://read.84000.co/translation/toh317.html">Distinctly Ascertaining the Meanings</ref>
                     </title> (<title xml:lang="Sa-Ltn">Arthaviniścayadharmaparyāya</title>, Toh 317). 84000: Translating the Words of the
                         Buddha, 2021.</bibl>
-                    <bibl xml:id="UT22084-072-007-361">Galasek-Hul, Bruno, and Lama Kunga Thartse Rinpoche (2021). <title xml:lang="en">
+                    <bibl xml:id="UT22084-072-007-361">Galasek-Hul, Bruno, and Lama Kunga Thartse Rinpoche, trans. (2021). <title xml:lang="en">
                             <ref target="https://read.84000.co/translation/toh339.html">Transformation of Karma</ref>
                         </title> (<title xml:lang="Sa-Ltn">Karmavibhaṅga</title>, Toh 339). 84000: Translating the Words of the Buddha, 2021.</bibl>
-                    <bibl xml:id="UT22084-072-007-362">———(forthcoming). <title xml:lang="en">
-                            <ref rend="pending" target="https://read.84000.co/translation/toh338.html">Exposition of Karma</ref>
-                        </title> (<title xml:lang="Sa-Ltn">Karmavibhaṅga</title>, Toh 338). 84000: Translating the Words of the Buddha, forthcoming.</bibl>
+                    <bibl xml:id="UT22084-072-007-362">———(2023), trans. <title xml:lang="en">
+                            <ref target="https://read.84000.co/translation/toh338.html">Exposition of Karma</ref>
+                        </title> (<title xml:lang="Sa-Ltn">Karmavibhaṅga</title>, Toh 338). 84000: Translating the Words of the Buddha, 2023.</bibl>
                     <bibl xml:id="UT22084-072-007-363">Gethin, Rupert. <title xml:lang="en">The Foundations of Buddhism</title>. Oxford: Oxford
                         University Press, 1998.</bibl>
                     <bibl xml:id="UT22084-072-007-364">Goldstein, Melvyn C., T. N. Shelling, and J. T. Surkhang. <title xml:lang="en">The New
@@ -2277,7 +2278,7 @@
                                 generally refers to the spirits of the dead. More specifically in Buddhism, it refers to a class of sentient beings
                                 who belong to the lower or unfortunate rebirth-destinies and who suffer from moderate to extreme dearth and want as a
                                 karmic result of negative actions based on craving, hatred, and attachment (see <title xml:lang="en">Exposition of
-                                    Karma</title>, Toh 338, folio 281.a<ref rend="pending" target="https://read.84000.co/translation/toh338.html" inst="281.a"/>). The common English rendering “hungry ghost” is a literal translation of the Chinese translation
+                                  Karma</title>, Toh 338, <ptr target="#UT22084-072-038-195"/>). The common English rendering “hungry ghost” is a literal translation of the Chinese translation
                                 of <foreign xml:lang="Sa-Ltn" type="term">preta</foreign>, <foreign xml:lang="zh" type="term">餓鬼</foreign>
                                 <foreign xml:lang="Zh-Ltn">e gui</foreign>.</term>
                         </gloss>
@@ -2796,8 +2797,7 @@
                             <term xml:lang="bo">འཛམ་བུའི་གླིང་།</term>
                             <term xml:lang="Sa-Ltn">Jambudvīpa</term>
                             <term type="definition">The southern continent where humans live according to ancient South Asian cosmology. For one
-                                explanation of the name, see <title xml:lang="en">Exposition of Karma</title>, Toh 338, <ref rend="pending" target="https://read.84000.co/translation/toh281.html" inst="281.a-change to milestone, add bibl">folio
-                                    281.a</ref>. See also <ptr target="#UT22084-072-007-122"/> in the present text. </term>
+                              explanation of the name, see <title xml:lang="en">Exposition of Karma</title>, Toh 338, <ptr target="#UT22084-072-038-186"/>. See also <ptr target="#UT22084-072-007-122"/> in the present text. </term>
                         </gloss>
                     </item>
                     <item>
