--- a/translations/kangyur/placeholders/043-002_toh65-the_prophecy_for_the_magician_bhadra.xml
+++ b/translations/kangyur/placeholders/043-002_toh65-the_prophecy_for_the_magician_bhadra.xml
@@ -20,11 +20,11 @@
                 <editor role="projectEditor" ref="contributors.xml#person-289">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.2 <date>2019</date>
+                <edition>v 0.1.3 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.h">
+            <publicationStmt status="2.g">
                 <idno xml:id="UT22084-043-002"/>
                 <date/>
             </publicationStmt>
@@ -40,12 +40,14 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-02-10T13:05:32.167Z" user="admin">10/02/2023 13:05:32</note>
+                <note type="lastUpdated" date-time="2023-04-20T09:50:20.008Z" user="admin">20/04/2023 09:50:20</note>
                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:42:32.43Z" user="john">v 0.1.0</note>
                 <note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:42:32.43Z" user="john">3</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2021-08-06T12:46:12.185Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.1.1" date-time="2021-08-06T12:46:12.185Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.1.2" date-time="2023-02-10T13:05:26.536Z" user="amy">Auto (update-titles)</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2023-04-20T09:50:15.751Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.1.3" date-time="2023-04-20T09:50:15.751Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
