--- a/translations/kangyur/placeholders/066-009_toh251-the_sutra_on_four_precepts.xml
+++ b/translations/kangyur/placeholders/066-009_toh251-the_sutra_on_four_precepts.xml
@@ -12,12 +12,13 @@
                 <author role="translatorMain" ref="eft:team-47"/>
                 <author role="translatorEng" ref="eft:person-258">Adam Pearcey</author>
                 <editor role="projectEditor" ref="eft:person-411">David Fiordalis</editor>
+                <editor role="copyEditor" ref="eft:person-433">Dawn Collins</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.7 <date>2021</date>
+                <edition>v 0.0.9 <date>2021</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.f">
+            <publicationStmt status="2.e">
                 <idno xml:id="UT22084-066-009"/>
                 <date/>
             </publicationStmt>
@@ -33,7 +34,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-03-29T13:28:43.6Z" user="admin">29/03/2023 13:28:43</note>
+                <note type="lastUpdated" date-time="2023-04-20T09:54:21.255Z" user="admin">20/04/2023 09:54:21</note>
                 <note type="updated" update="translation-status" value="3" date-time="2021-02-08T07:58:40.091Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-02-08T07:58:40.091Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-02-08T07:59:06.674Z" user="line-tofte">Auto (update-contributors)</note>
@@ -45,6 +46,9 @@
                 <note type="updated" update="text-version" value="0.0.6" date-time="2023-03-15T15:52:50.134Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.f" date-time="2023-03-29T13:28:39.188Z" user="line-tofte">2.f</note>
                 <note type="updated" update="text-version" value="0.0.7" date-time="2023-03-29T13:28:39.188Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.8" date-time="2023-04-20T09:53:54.969Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.e" date-time="2023-04-20T09:54:17.008Z" user="line-tofte">2.e</note>
+                <note type="updated" update="text-version" value="0.0.9" date-time="2023-04-20T09:54:17.008Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
