--- a/translations/tengyur/placeholders/113-010_toh3990-aryacaturdharmakavyakhyana.xml
+++ b/translations/tengyur/placeholders/113-010_toh3990-aryacaturdharmakavyakhyana.xml
@@ -12,10 +12,10 @@
                 <editor role="projectEditor" ref="eft:person-411">David Fiordalis</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.9 <date>2022</date>
+                <edition>v 0.0.10 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.f">
+            <publicationStmt status="2.e">
                 <idno xml:id="UT23703-113-010"/>
                 <date/>
             </publicationStmt>
@@ -32,7 +32,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-03-29T13:29:53.692Z" user="admin">29/03/2023 13:29:53</note>
+                <note type="lastUpdated" date-time="2023-04-20T09:55:00.621Z" user="admin">20/04/2023 09:55:00</note>
                 <note type="updated" update="translation-status" value="4" date-time="2022-01-28T08:36:55.219Z" user="line-tofte">4</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-01-28T08:36:55.219Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="import" value="fileDesc" import="tengyur-data-3981-4019_PH_new_v2.4.xml" date-time="2022-01-28T10:32:05.149Z" user="admin"/>
@@ -49,6 +49,8 @@
                 <note type="updated" update="text-version" value="0.0.8" date-time="2023-03-15T15:54:07.249Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.f" date-time="2023-03-29T13:29:49.286Z" user="line-tofte">2.f</note>
                 <note type="updated" update="text-version" value="0.0.9" date-time="2023-03-29T13:29:49.286Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.e" date-time="2023-04-20T09:54:56.376Z" user="line-tofte">2.e</note>
+                <note type="updated" update="text-version" value="0.0.10" date-time="2023-04-20T09:54:56.376Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
