--- a/translations/kangyur/placeholders/090-003_toh559-the_great_peahen_queen_of_incantations.xml
+++ b/translations/kangyur/placeholders/090-003_toh559-the_great_peahen_queen_of_incantations.xml
@@ -20,11 +20,11 @@
                 <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2019</date>
+                <edition>v 0.0.7 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.b">
+            <publicationStmt status="2.a">
                 <idno xml:id="UT22084-090-003"/>
                 <date/>
             </publicationStmt>
@@ -40,7 +40,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-04-12T13:46:40.554Z" user="admin">12/04/2023 13:46:40</note>
+                <note type="lastUpdated" date-time="2023-04-20T10:06:26.979Z" user="admin">20/04/2023 10:06:26</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:22:43.995Z" user="mike">2.d</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-08T10:19:35.998Z" user="line-tofte">Auto (update-contributors)</note>
@@ -48,6 +48,8 @@
                 <note type="updated" update="text-version" value="0.0.5" date-time="2022-08-25T13:17:58.367Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.b" date-time="2023-04-12T13:46:36.277Z" user="line-tofte">2.b</note>
                 <note type="updated" update="text-version" value="0.0.6" date-time="2023-04-12T13:46:36.277Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.a" date-time="2023-04-20T10:06:22.752Z" user="line-tofte">2.a</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2023-04-20T10:06:22.752Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
