--- a/translations/kangyur/translations/072-007_toh307-sutra_on_the_limits_of_lifes_duration.xml
+++ b/translations/kangyur/translations/072-007_toh307-sutra_on_the_limits_of_lifes_duration.xml
@@ -26,7 +26,7 @@
                 <editor role="finalReviewer" ref="contributors.xml#person-250">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.13 <date>2023</date>
+                <edition>v 1.0.14 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -62,7 +62,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-04-20T08:39:54.15Z" user="admin">20/04/2023 08:39:54</note>
+                <note type="lastUpdated" date-time="2023-04-20T15:52:34.392Z" user="admin">20/04/2023 15:52:34</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version
                     increment</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:19:24.922Z" user="mike">2.d</note>
@@ -109,6 +109,7 @@
                 <note type="updated" update="text-version" value="1.0.11" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
                 <note type="updated" update="text-version" value="1.0.12" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
                 <note type="updated" update="text-version" value="1.0.13" date-time="2023-04-20T08:39:51.272Z" user="celso">Activated pending links</note>
+                <note type="updated" update="text-version" value="1.0.14" date-time="2023-04-20T15:52:31.543Z" user="martina-cotter">Added pending links.</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
