--- a/translations/kangyur/placeholders/034-029_toh41-the_sutra_of_the_sun.xml
+++ b/translations/kangyur/placeholders/034-029_toh41-the_sutra_of_the_sun.xml
@@ -12,12 +12,13 @@
                 <author role="translatorEng" ref="eft:person-316">Giuliano Francisco Proença</author>
                 <editor role="proofreader" ref="eft:person-359">Daniela Espíndola</editor>
                 <editor role="projectEditor" ref="eft:person-250">Rory Lindsay</editor>
+                <editor role="copyEditor" ref="eft:person-433">Dawn Collins</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.9 <date>2020</date>
+                <edition>v 0.0.11 <date>2020</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.e">
+            <publicationStmt status="2.d">
                 <idno xml:id="UT22084-034-029"/>
                 <date/>
             </publicationStmt>
@@ -33,7 +34,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-04-05T14:54:00.057Z" user="admin">05/04/2023 14:54:00</note>
+                <note type="lastUpdated" date-time="2023-04-21T10:05:09.933Z" user="admin">21/04/2023 10:05:09</note>
                 <note type="updated" update="translation-status" value="4" date-time="2020-12-08T12:55:39.006Z" user="line-tofte">4</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-12-08T12:55:39.006Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2021-03-10T08:29:46.538Z" user="line-tofte">3</note>
@@ -49,6 +50,9 @@
                 <note type="updated" update="text-version" value="0.0.8" date-time="2023-02-21T14:41:05.084Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="translation-status" value="2.e" date-time="2023-04-05T14:53:55.759Z" user="line-tofte">2.e</note>
                 <note type="updated" update="text-version" value="0.0.9" date-time="2023-04-05T14:53:55.759Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.10" date-time="2023-04-05T14:56:17.692Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.d" date-time="2023-04-21T10:05:05.619Z" user="line-tofte">2.d</note>
+                <note type="updated" update="text-version" value="0.0.11" date-time="2023-04-21T10:05:05.619Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
