--- a/translations/kangyur/placeholders/087-011_toh505a,1059a-mantra_for_incanting_medicines.xml
+++ b/translations/kangyur/placeholders/087-011_toh505a,1059a-mantra_for_incanting_medicines.xml
@@ -13,10 +13,10 @@
                 <sponsor ref="sponsors.xml#sponsor-2">May, George, Likai and Lillian Gu</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.14 <date>2021</date>
+                <edition>v 0.0.15 <date>2021</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.d">
+            <publicationStmt status="2.c">
                 <idno xml:id="UT22084-087-011"/>
                 <date/>
             </publicationStmt>
@@ -42,7 +42,7 @@
             </sourceDesc>
             <notesStmt>
                 <note>Note: not identified in Toh.</note>
-                <note type="lastUpdated" date-time="2023-04-21T09:38:36.296Z" user="admin">21/04/2023 09:38:36</note>
+                <note type="lastUpdated" date-time="2023-04-24T08:54:44.569Z" user="admin">24/04/2023 08:54:44</note>
                 <note type="updated" update="translation-status" value="4" date-time="2021-01-12T15:49:02.772Z" user="line-tofte">4</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-01-12T15:49:02.772Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-01-14T10:25:08.293Z" user="line-tofte">Auto (update-sponsorship)</note>
@@ -62,6 +62,8 @@
                 <note type="updated" update="text-version" value="0.0.13" date-time="2023-04-18T11:09:47.637Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2023-04-21T09:38:31.978Z" user="line-tofte">2.d</note>
                 <note type="updated" update="text-version" value="0.0.14" date-time="2023-04-21T09:38:31.978Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.c" date-time="2023-04-24T08:54:40.198Z" user="line-tofte">2.c</note>
+                <note type="updated" update="text-version" value="0.0.15" date-time="2023-04-24T08:54:40.198Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
