--- a/translations/kangyur/placeholders/091-044_toh647,1079-the_oblation_ritual_which_comforts_the_female_ghosts_whose_mouths_are_aflame.xml
+++ b/translations/kangyur/placeholders/091-044_toh647,1079-the_oblation_ritual_which_comforts_the_female_ghosts_whose_mouths_are_aflame.xml
@@ -20,11 +20,11 @@
                 <editor role="associateEditor" ref="eft:person-422">George FitzHerbert</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2020</date>
+                <edition>v 0.0.8 <date>2020</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.f">
+            <publicationStmt status="2.c">
                 <idno xml:id="UT22084-091-044"/>
                 <date/>
             </publicationStmt>
@@ -49,7 +49,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-03-01T14:49:38.185Z" user="admin">01/03/2023 14:49:38</note>
+                <note type="lastUpdated" date-time="2023-04-24T12:29:16.388Z" user="admin">24/04/2023 12:29:16</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-02-17T09:16:33.593Z" user="andreas">0.0.1</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-02-17T09:16:33.593Z" user="andreas">2.h</note>
                 <note type="updated" update="translation-status" value="3" date-time="2020-02-17T14:12:13.249Z" user="andreas">3</note>
@@ -64,6 +64,8 @@
                 <note type="updated" update="text-version" value="0.0.6" date-time="2023-01-17T08:36:12.281Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.f" date-time="2023-03-01T14:49:31.858Z" user="line-tofte">2.f</note>
                 <note type="updated" update="text-version" value="0.0.7" date-time="2023-03-01T14:49:31.858Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.c" date-time="2023-04-24T12:29:12.118Z" user="line-tofte">2.c</note>
+                <note type="updated" update="text-version" value="0.0.8" date-time="2023-04-24T12:29:12.118Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
