--- a/translations/kangyur/placeholders/091-062_toh665,1084-the_essence_of_ganapati.xml
+++ b/translations/kangyur/placeholders/091-062_toh665,1084-the_essence_of_ganapati.xml
@@ -4,25 +4,24 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">tshogs kyi bdag po'i snying po/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">gaṇapatihṛdaya</title>
                 <title type="mainTitle" xml:lang="en">The Essence of Gaṇapati</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa tshogs kyi bdag po'i snying po/</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">gaṇapatihṛdaya</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">tshogs kyi bdag po'i snying po/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryagaṇapatihṛdaya</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa tshogs kyi bdag po'i snying po/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryagaṇapatihṛdaya</title>
-                <author role="translatorMain" ref="contributors.xml#team-9"/>
-                <consultant role="projectManager" ref="contributors.xml#person-50">Dr. Andreas Doctor</consultant>
-                <author role="translatorEng" ref="contributors.xml#person-274">Adam Krug</author>
-                <consultant role="dharmaMaster" ref="contributors.xml#person-40">Chokyi Nyima Rinpoche</consultant>
-                <editor role="reviser" ref="contributors.xml#person-50">Andreas Doctor</editor>
+                <author role="translatorMain" ref="eft:team-9"/>
+                <consultant role="projectManager" ref="eft:person-50">Andreas Doctor</consultant>
+                <author role="translatorEng" ref="eft:person-274">Adam Krug</author>
+                <consultant role="dharmaMaster" ref="eft:person-40">Chokyi Nyima Rinpoche</consultant>
+                <editor role="reviser" ref="eft:person-50">Andreas Doctor</editor>
+                <editor role="projectEditor" ref="eft:person-422">George FitzHerbert</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.4 <date>2019</date>
+                <edition>v 0.1.6 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.g">
+            <publicationStmt status="2.f">
                 <idno xml:id="UT22084-091-062"/>
                 <date/>
             </publicationStmt>
@@ -47,13 +46,18 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-03-29T12:30:26.648Z" user="admin">29/03/2023 12:30:26</note>
-<note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:05:20.372Z" user="john">v 0.1.0</note>
-<note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:05:20.372Z" user="john">3</note>
+                <note type="lastUpdated" date-time="2023-04-24T12:46:41.673Z" user="admin">24/04/2023 12:46:41</note>
+                <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:05:20.372Z" user="john">v 0.1.0</note>
+                <note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:05:20.372Z" user="john">3</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2021-05-10T08:21:21.912Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.1.1" date-time="2021-05-10T08:21:21.912Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.1.2" date-time="2021-05-10T08:22:13.213Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.1.3" date-time="2021-05-10T08:22:28.94Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2023-03-29T12:30:22.36Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.1.4" date-time="2023-03-29T12:30:22.36Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.1.3" date-time="2021-05-10T08:22:28.94Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2023-03-29T12:30:22.36Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.1.4" date-time="2023-03-29T12:30:22.36Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.1.5" date-time="2023-03-29T12:31:05.6Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2023-04-24T12:46:36.204Z" user="line-tofte">2.f</note>
+                <note type="updated" update="text-version" value="0.1.6" date-time="2023-04-24T12:46:36.204Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
