--- a/translations/kangyur/placeholders/091-063_toh666-the_tantra_of_ganapati.xml
+++ b/translations/kangyur/placeholders/091-063_toh666-the_tantra_of_ganapati.xml
@@ -15,11 +15,11 @@
     <author role="translatorEng" ref="contributors.xml#person-274">Adam Krug</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.1 <date>2019</date>
+                <edition>v 0.1.2 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.h">
+            <publicationStmt status="2.f">
                 <idno xml:id="UT22084-091-063"/>
                 <date/>
             </publicationStmt>
@@ -35,9 +35,9 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-08-08T14:16:27.719Z" user="admin">08/08/2022 14:16:27</note>
+                <note type="lastUpdated" date-time="2023-04-24T12:57:44.448Z" user="admin">24/04/2023 12:57:44</note>
 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:06:14.363Z" user="john">v 0.1.0</note>
-<note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:06:14.363Z" user="john">3</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-08-08T14:16:19.71Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.1.1" date-time="2022-08-08T14:16:19.71Z" user="line-tofte">Auto (update-publication-status)</note>
+<note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:06:14.363Z" user="john">3</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-08-08T14:16:19.71Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.1.1" date-time="2022-08-08T14:16:19.71Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.f" date-time="2023-04-24T12:57:40.229Z" user="line-tofte">2.f</note>    <note type="updated" update="text-version" value="0.1.2" date-time="2023-04-24T12:57:40.229Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
