--- a/translations/kangyur/placeholders/088-003_toh509,920-incantation_of_the_hundred_thousand_ornaments_of_the_essence_of_awakening.xml
+++ b/translations/kangyur/placeholders/088-003_toh509,920-incantation_of_the_hundred_thousand_ornaments_of_the_essence_of_awakening.xml
@@ -13,10 +13,10 @@
                 <author role="translatorEng" ref="eft:person-23">Bruno Galasek-Hul</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2022</date>
+                <edition>v 0.0.3 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt status="2.h">
                 <idno xml:id="UT22084-088-003"/>
                 <date/>
             </publicationStmt>
@@ -41,10 +41,12 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-16T09:46:37.155Z" user="admin">16/12/2022 09:46:37</note>
+                <note type="lastUpdated" date-time="2023-04-24T13:17:07.893Z" user="admin">24/04/2023 13:17:07</note>
                 <note type="updated" update="translation-status" value="3" date-time="2022-12-16T09:46:03.111Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T09:46:03.111Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-16T09:46:31.432Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2023-04-24T13:17:03.662Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2023-04-24T13:17:03.662Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
