--- a/translations/kangyur/placeholders/088-027_toh533,860-the_incantation_the_essence_of_sakyamuni.xml
+++ b/translations/kangyur/placeholders/088-027_toh533,860-the_incantation_the_essence_of_sakyamuni.xml
@@ -12,10 +12,10 @@
                 <author role="translatorEng" ref="eft:person-23">Bruno Galasek-Hul</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2022</date>
+                <edition>v 0.0.3 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt status="2.h">
                 <idno xml:id="UT22084-088-027"/>
                 <date/>
             </publicationStmt>
@@ -40,10 +40,12 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-16T09:49:11.679Z" user="admin">16/12/2022 09:49:11</note>
+                <note type="lastUpdated" date-time="2023-04-24T13:20:17.997Z" user="admin">24/04/2023 13:20:17</note>
                 <note type="updated" update="translation-status" value="3" date-time="2022-12-16T09:48:36.796Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T09:48:36.796Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-16T09:49:05.95Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2023-04-24T13:20:13.678Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2023-04-24T13:20:13.678Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
