--- a/translations/kangyur/translations/001-001_toh1-1_chapter_on_going_forth.xml
+++ b/translations/kangyur/translations/001-001_toh1-1_chapter_on_going_forth.xml
@@ -31,7 +31,7 @@
                 <sponsor ref="sponsors.xml#sponsor-190">Irene Tillman</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.35.13 <date>2023</date>
+                <edition>v 1.36.1 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -66,7 +66,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-04-19T11:10:37.049Z" user="admin">19/04/2023 11:10:37</note>
+                <note type="lastUpdated" date-time="2023-04-26T09:12:14.937Z" user="admin">26/04/2023 09:12:14</note>
                 <note type="updated" update="text-version" value="v 1.14" date-time="2019-06-18T02:25:27.313Z" user="celso">v 1.14 2019</note>
                 <note type="updated" update="text-version" value="v 1.15" date-time="2019-06-21T14:11:40.294Z" user="celso">v 1.15 2019</note>
                 <note type="updated" update="text-version" value="v 1.17" date-time="2019-07-31T19:46:14.742Z" user="celso">v 1.17 2019</note>
@@ -137,6 +137,7 @@
                 <note type="updated" update="text-version" value="1.35.11" date-time="2022-12-08T00:19:51.726Z" user="konchog">A couple minor fixes.</note>
                 <note type="updated" update="text-version" value="1.35.12" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
                 <note type="updated" update="text-version" value="1.35.13" date-time="2023-04-19T11:10:33.873Z" user="celso">Corrected @type values for Skt. attestation to match the new code in the schema. No need to update associated files.</note>
+                <note type="updated" update="text-version" value="1.36.1" date-time="2023-04-26T09:12:11.666Z" user="john">Edited one note.</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -2576,10 +2577,12 @@
                                     the Buddha explains and recommends its use in the construction of stūpas; also Sykes (1856) and Skilling (2003).
                                     It should be noted that there are several quite significantly different renderings of the verse in
                                     Tibetan—compare, for example, the version in the present text and the one in Toh 212. A considerably expanded
-                                    version of the same four lines, which exists in Sanskrit as well as in Tibetan translation, can be seen in other
-                                    texts—for example, in the parallel version of this narrative in the <title xml:lang="Sa-Ltn">
+                                    version of the same four lines, which exists in Tibetan translation but of which the original Sanskrit may be lost, can be seen in other
+                                    texts—for example, in the parallel version of this narrative in the 
+                                <title xml:lang="Sa-Ltn">
                                         <ref target="https://read.84000.co/translation/toh138.html#UT22084-056-006-33">Mahā­sannipāta­ratna­ketu­dhāraṇī</ref>
-                                    </title>, Toh 138, folio 188.b (1.3) <foreign xml:lang="la">et
+                                    </title>, 
+                                Toh 138, folio 188.b (1.3) <foreign xml:lang="la">et
                                         seq.</foreign> (see <ptr target="#UT22084-001-001-29018"/>).</note>
                             </l>
                         </lg>
